--- a/Web.config
+++ b/Web.config
@@ -27,10 +27,10 @@
 				<add assembly="netstandard, Version=2.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
 			</assemblies>
 		</compilation>
-		<httpRuntime targetFramework="4.7.2" />
+		<httpRuntime targetFramework="4.7.2" maxRequestLength="2147483647" maxQueryStringLength="32768" maxUrlLength="65536" executionTimeout="3600" />
 	</system.web>
-	<!--<system.webServer>
-		<rewrite>
+	<system.webServer>
+		<!--<rewrite>
 			<rules>
 				<rule name="Https and non-www">
 					<match url="(.*)" />
@@ -41,8 +41,15 @@
 					<action type="Redirect" url="https://trogiangvlu.website/{R:1}" />
 				</rule>
 			</rules>
-		</rewrite>
-	</system.webServer>-->
+		</rewrite>-->
+		<security>
+			<requestFiltering>
+				<!--The default size is 30000000 bytes (28.6 MB). MaxValue is 4294967295 bytes (4 GB)-->
+				<!-- 100 MB in bytes -->
+				<requestLimits maxAllowedContentLength="4294967295" />
+			</requestFiltering>
+		</security>
+	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
