--- a/Web.config
+++ b/Web.config
@@ -28,6 +28,10 @@
 			</assemblies>
 		</compilation>
 		<httpRuntime targetFramework="4.7.2" maxRequestLength="2147483647" maxQueryStringLength="32768" maxUrlLength="65536" executionTimeout="3600" />
+
+		<customErrors mode="On" defaultRedirect="~/Error">
+			<error redirect="~/Error" statusCode="404" />
+		</customErrors>
 	</system.web>
 	<system.webServer>
 		<!--<rewrite>
